--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -12,6 +12,7 @@
 
     @media @mobile {
       background-image: none;
+      height: 400px;
     }
 
     .img-text {
@@ -30,6 +31,10 @@
       h1 {
         font-size: 4.5rem;
         z-index: 1;
+
+        @media @mobile {
+          font-size: 3rem;
+        }
       }
 
       .btn-quote {
